--- a/notus-react-main/package.json
+++ b/notus-react-main/package.json
@@ -5,6 +5,8 @@
   "repository": "https://github.com/creativetimofficial/notus-react",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@fullcalendar/core": "^6.1.18",
     "@fullcalendar/daygrid": "^6.1.18",
@@ -12,12 +14,16 @@
     "@fullcalendar/react": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.18",
     "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "antd": "^5.24.4",
     "aos": "^2.3.4",
     "autoprefixer": "^10.2.5",
-    "chart.js": "2.9.4",
+    "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.23.9",
@@ -32,6 +38,7 @@
     "react": "18.3.1",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
@@ -40,6 +47,7 @@
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^2.0.4",
     "tsparticles": "^3.8.1",
