--- a/notus-react-main/public/manifest.json
+++ b/notus-react-main/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "Notus React",
-  "name": "Notus React by Creative Tim",
+  "short_name": "Sagemcom Tech",
+  "name": "Sagemcom Technicien Mobile",
+  "description": "Application mobile pour techniciens Sagemcom - Gestion des interventions",
   "icons": [
     {
       "src": "favicon.ico",
@@ -9,12 +10,18 @@
     },
     {
       "src": "apple-icon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/mobile/technicien",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "theme_color": "#1e3a8a",
+  "background_color": "#667eea",
+  "scope": "/",
+  "categories": ["productivity", "business"],
+  "lang": "fr-FR",
+  "dir": "ltr"
 }
